fix bug table overflow when rowcontents is closed  ...

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -190,31 +190,6 @@
   label {
     cursor: pointer;
   }
-  .swiper {
-    position: relative;
-    overflow: hidden;
-  }
-  .swiper-wrapper {
-    display: flex;
-    max-width: max-content;
-  }
-  .swiper-prev,
-  .swiper-next {
-    display: grid;
-    place-items: center;
-    width: 32px;
-    height: 32px;
-    position: absolute;
-    top: 50%;
-    left: -16px;
-    transform: translateY(-50%);
-    background-color: var(--color-t-primary);
-    border-radius: 50%;
-    border: 1px solid var(--color-bo-secondary);
-  }
-  .swiper-next {
-    right: -16px;
-  }
 }
 @layer utilities {
   .heading-2 {
